[tool.poetry]
name = "mediate"
version = "0.1.5"
description = "Middleware for every occasion"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tombulled/middleware"
repository = "https://github.com/tombulled/middleware"
documentation = "https://github.com/tombulled/middleware"
keywords = ["python", "middleware", "mediate"]

[tool.poetry.dependencies]
python = "^3.8"
roster = "^0.1.11"
typing-extensions = "^4.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
